INCLUDE_DIRECTORIES ( ${BIFROST_INCLUDE_DIR} )

LINK_DIRECTORIES ( ${MAYA_LOCATION}/lib )

HDK_ADD_LIBRARY ( Bifrost SHARED
  Bifrost_IOTranslator.cpp
  )

TARGET_LINK_LIBRARIES ( Bifrost
  ${BIFROST_REQUIRED_LIBRARIES}
  )

IF(DEFINED ENV{HIH})
  INSTALL ( TARGETS
	Bifrost
	DESTINATION
	$ENV{HIH}/dso
	)
ENDIF()
